Fix alignment of first global footer list on trac sites
Fixes https://github.com/WordPress/wporg-mu-plugins/issues/487

--- a/mu-plugins/blocks/global-header-footer/postcss/footer/footer.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/footer/footer.pcss
@@ -23,6 +23,7 @@
 		& ul {
 			list-style: none;
 			padding: 0;
+			margin-top: 0;
 
 			& li + li {
 				margin-top: 5px;
